# hyperbench

./: .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  data_design.excalidraw  index.html  objects.inv  pyproject.toml  sitemap.xml  utest.sh
.github/: mkdocs.yml
.github/hooks/: .pre-commit-config.yaml
.github/workflows/: check.yaml  chore.yaml  docs.yaml
api/reference/: index.html
contributing/: index.html
docs/: contributing.md  deprecated_design.excalidraw  index.md  ref.md
docs/api/: reference.md
docs/getting-started/: installation.md
docs/user-guide/: user.md
getting-started/installation/: index.html
hyperbench/data/: __init__.py  dataset.py  loader.py
hyperbench/data/datasets/: algebra.json.zst  dblp.json.zst
hyperbench/dataset/: dataset.py
hyperbench/hlp/: __init__.py  common_neighbors_hlp.py  hlp.py
hyperbench/models/: __init__.py  common_neighbors.py  hypergcn.py
hyperbench/nn/: __init__.py  conv.py  nn.py  scorer.py
hyperbench/tests/: __init__.py
hyperbench/tests/mock/: mock.py  (+1 more)
hyperbench/train/: __init__.py  negative_sampler.py  trainer.py
hyperbench/types/: __init__.py  graph.py  hdata.py  hypergraph.py  model.py
hyperbench/utils/: __init__.py  data_utils.py  graph_utils.py  hif.py  sparse_utils.py  torch_utils.py
ref/: index.html
search/: search_index.json
tests/: test_types.py  test_utils.py
tests/data/: loader_test.py
tests/mock/: hif_compliant.json
tests/test_data/: algebra.hif.json
tests/types/: hypergraph_test.py
tests/utils/: hif_test.py  torch_utils_test.py
user-guide/user/: index.html
(+14 files in other folders)
