[project]
name = "hyperbench"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastjsonschema>=2.21.2",
    "gdown>=5.2.1",
    "numpy>=1.240",
    "requests>=2.32.5",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--verbose",
    "--tb=short",
    "--strict-markers",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["hyperbench"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
